RT-39826: Replace sun.misc.BASE64* with java.util.Base64
Reviewed-by: ant, ddhill